--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+assets/css/test3.css
+assets/jsx/app_hold.jsx
+assets/jsx/test.jsx
+assets/jsx/test2.jsx
+assets/jsx/test3.jsx
+reduxtest.html
+test.html
+test3.html
